<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.demento.smarthouse.MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
    >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
    >
        <TextView
                android:text="@string/HomeClimate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:textColor="@android:color/background_light"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textTemp" android:layout_weight="1"
                    android:gravity="right" android:background="@android:color/holo_orange_light"
                    android:textColor="@android:color/background_light"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/huminidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:background="@android:color/holo_blue_light"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textHuminidity" android:layout_weight="1"
                    android:gravity="right" android:background="@android:color/holo_blue_light"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layoutDirection="rtl">
            <CheckBox
                    android:text="@string/climateOnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/checkBox" android:layout_weight="1"
                    android:checked="true"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layoutDirection="rtl">
                <ImageView
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:layout_weight="1" android:id="@+id/imgMainDoor"
                    app:srcCompat="@drawable/lock"
            />
                <TextView
                        android:text="@string/HomeDoorMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView7"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_weight="1"
                        android:gravity="left"/>
            </LinearLayout>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="@android:color/darker_gray"
                    android:nestedScrollingEnabled="false" android:id="@+id/lstMainDoor"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layoutDirection="rtl">
                <ImageView
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/unlock"
                        android:layout_weight="1" android:id="@+id/imgHomeDoor1"/>
                <TextView
                        android:text="@string/HomeDoor1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView9"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_weight="1"
                        android:gravity="left"/>
            </LinearLayout>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="@android:color/darker_gray"
                    android:id="@+id/lstHomeDoor"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
